@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 16Feb2022 Adds support for GOMP_taskloop_ull and changes interposition mechanism for a more robust one
  + 04Jan2022 Adds XML option to exclude some MPI_Comm_* calls from tracing 
  * 27Sep2021 Fixes states in OpenMP taskgroup and taskloop regions 
  + 22Sep2021 Adds dependency lines between instantiation and execution of OpenMP tasks for GNU libgomp runtime
